--- a/dev/dev.ipynb
+++ b/dev/dev.ipynb
@@ -46,49 +46,12 @@
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": null,
+   "execution_count": 5,
    "outputs": []
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "Index(['Unnamed: 0', 'Quantidade', 'Tipo de ingresso',\n",
-       "       'Status do participante', 'Como você se define', 'Se outro, qual?',\n",
-       "       'Como você se identifica?', 'Se outro, qual?.1',\n",
-       "       'Faz parte da população T (pessoa transgênera, travesti)?',\n",
-       "       'Orientação sexual:', 'Se outro, qual?.2',\n",
-       "       'Pessoa com necessidades específicas?', 'Se sim, qual?',\n",
-       "       'Em qual UF você reside?', 'Em qual país você reside?',\n",
-       "       'De quais edições da Python Brasil você já participou?',\n",
-       "       'Você já participou de algum outro evento Python?',\n",
-       "       'Você participou de outros eventos online durante a pandemia de covid-19?',\n",
-       "       'Há quanto tempo você programa em Python?',\n",
-       "       'Como você classificaria seu nível de conhecimento em Python?',\n",
-       "       'Você é estudante?', 'Você trabalha com Python?',\n",
-       "       'Você pretende submeter alguma atividades (palestra, tutorial) para a Python Brasil?',\n",
-       "       'Você faz parte de alguma comunidade local? (grupy, PUG, PyLadies, AfroPython)',\n",
-       "       'Se sim, qual?.1',\n",
-       "       'A Python Brasil possui um Código de Conduta (https://python.org.br/cdc) para assegurar que todas as pessoas se sintam confortáveis e seguras em seus ambientes. Para participar do evento, é necessário que você esteja ciente e respeite essas orientações.'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 16
-    }
-   ],
-   "source": [
-    "pd.read_csv(download_csv_file(\"inscrições-palestras\")).columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,82 +76,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_event_tickets():\n",
-    "    df = get_df_from_csv(\"inscrições-palestras\")\n",
-    "\n",
+    "    df = get_df_from_csv(\"inscrições-tutoriais\")\n",
     "    rename_columns = {\n",
     "        \"Orientação sexual:\":\"Orientação sexual\",\n",
     "        \"Se outro, qual?\": \"Se define - Se outro, qual?\",\n",
     "        \"Se outro, qual?.1\": \"Se identifica - Se outro, qual?\",\n",
     "        \"Se outro, qual?.2\": \"Orientação sexual - Se outro, qual?\",\n",
     "        \"Se sim, qual?\": \"Necessidades específicas - Se sim, qual?\",\n",
-    "        \"Se sim, qual?.1\": \"comunidade local - Se sim, qual?\",\n",
     "    }\n",
     "\n",
     "    return df[\n",
-    "        [\n",
-    "            \"Como você se define\",\n",
-    "            \"Se outro, qual?\",\n",
-    "            \"Como você se identifica?\",\n",
-    "            \"Se outro, qual?.1\",\n",
-    "            \"Faz parte da população T (pessoa transgênera, travesti)?\",\n",
-    "            \"Orientação sexual:\",\n",
-    "            \"Se outro, qual?.2\",\n",
-    "            \"Pessoa com necessidades específicas?\",\n",
-    "            \"Se sim, qual?\",\n",
-    "            \"Em qual UF você reside?\",\n",
-    "            \"Em qual país você reside?\",\n",
-    "            \"De quais edições da Python Brasil você já participou?\",\n",
-    "            \"Você já participou de algum outro evento Python?\",\n",
-    "            \"Você participou de outros eventos online durante a pandemia de covid-19?\",\n",
-    "            \"Há quanto tempo você programa em Python?\",\n",
-    "            \"Como você classificaria seu nível de conhecimento em Python?\",\n",
-    "            \"Você é estudante?\",\n",
-    "            \"Você trabalha com Python?\",\n",
-    "            \"Você pretende submeter alguma atividades (palestra, tutorial) para a Python Brasil?\",\n",
-    "            \"Você faz parte de alguma comunidade local? (grupy, PUG, PyLadies, AfroPython)\",\n",
-    "            \"Se sim, qual?.1\",\n",
-    "        ]\n",
-    "    ].rename(columns=rename_columns).fillna('SEM RESPOSTA')\n"
+    "['Como você se define?',\n",
+    "       'Se outro, qual?', 'Como você se identifica?', 'Se outro, qual?.1',\n",
+    "       'Faz parte da população T (pessoa transgênera, travesti)? ',\n",
+    "       'Orientação sexual:', 'Se outro, qual?.2',\n",
+    "       'Pessoa com necessidades específicas?', 'Se sim, qual?']\n",
+    "    ].rename(columns=rename_columns).fillna('N/A')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "     Em qual UF você reside?\n",
-       "0                         SP\n",
-       "1                         SP\n",
-       "2                         PB\n",
-       "3                         PE\n",
-       "4                         PR\n",
-       "...                      ...\n",
-       "7075                      SP\n",
-       "7076                      MG\n",
-       "7077                      PB\n",
-       "7078                      DF\n",
-       "7079                      SP\n",
+       "    Como você se define? Se define - Se outro, qual? Como você se identifica?  \\\n",
+       "0      Uma pessoa branca                SEM RESPOSTA                   Mulher   \n",
+       "1      Uma pessoa branca                SEM RESPOSTA                    Homem   \n",
+       "2      Uma pessoa branca                SEM RESPOSTA                    Homem   \n",
+       "3      Uma pessoa branca                SEM RESPOSTA                    Homem   \n",
+       "4      Uma pessoa branca                SEM RESPOSTA                    Homem   \n",
+       "..                   ...                         ...                      ...   \n",
+       "582     Uma pessoa parda                SEM RESPOSTA                    Homem   \n",
+       "583     Uma pessoa parda                SEM RESPOSTA                    Homem   \n",
+       "584   Uma pessoa amarela                SEM RESPOSTA                   Mulher   \n",
+       "585    Uma pessoa branca                SEM RESPOSTA                    Homem   \n",
+       "586     Uma pessoa parda                SEM RESPOSTA                   Mulher   \n",
        "\n",
-       "[7080 rows x 1 columns]"
+       "    Se identifica - Se outro, qual?  \\\n",
+       "0                      SEM RESPOSTA   \n",
+       "1                      SEM RESPOSTA   \n",
+       "2                      SEM RESPOSTA   \n",
+       "3                      SEM RESPOSTA   \n",
+       "4                      SEM RESPOSTA   \n",
+       "..                              ...   \n",
+       "582                    SEM RESPOSTA   \n",
+       "583                    SEM RESPOSTA   \n",
+       "584                    SEM RESPOSTA   \n",
+       "585                    SEM RESPOSTA   \n",
+       "586                    SEM RESPOSTA   \n",
+       "\n",
+       "    Faz parte da população T (pessoa transgênera, travesti)?   \\\n",
+       "0                                                  Não          \n",
+       "1                                                  Não          \n",
+       "2                                                  Não          \n",
+       "3                                                  Não          \n",
+       "4                                                  Não          \n",
+       "..                                                 ...          \n",
+       "582                                                Não          \n",
+       "583                                                Não          \n",
+       "584                                                Não          \n",
+       "585                                                Não          \n",
+       "586                                                Não          \n",
+       "\n",
+       "    Orientação sexual Orientação sexual - Se outro, qual?  \\\n",
+       "0            Bisexual                        SEM RESPOSTA   \n",
+       "1              Hétero                        SEM RESPOSTA   \n",
+       "2              Hétero                        SEM RESPOSTA   \n",
+       "3              Hétero                        SEM RESPOSTA   \n",
+       "4              Hétero                        SEM RESPOSTA   \n",
+       "..                ...                                 ...   \n",
+       "582            Hétero                        SEM RESPOSTA   \n",
+       "583            Hétero                        SEM RESPOSTA   \n",
+       "584         Pansexual                        SEM RESPOSTA   \n",
+       "585            Hétero                        SEM RESPOSTA   \n",
+       "586            Hétero                        SEM RESPOSTA   \n",
+       "\n",
+       "    Pessoa com necessidades específicas?  \\\n",
+       "0                                    Não   \n",
+       "1                                    Não   \n",
+       "2                                    Não   \n",
+       "3                                    Não   \n",
+       "4                                    Não   \n",
+       "..                                   ...   \n",
+       "582                                  Não   \n",
+       "583                                  Não   \n",
+       "584                                  Não   \n",
+       "585                                  Não   \n",
+       "586                                  Não   \n",
+       "\n",
+       "    Necessidades específicas - Se sim, qual?  \n",
+       "0                               SEM RESPOSTA  \n",
+       "1                               SEM RESPOSTA  \n",
+       "2                               SEM RESPOSTA  \n",
+       "3                               SEM RESPOSTA  \n",
+       "4                               SEM RESPOSTA  \n",
+       "..                                       ...  \n",
+       "582                             SEM RESPOSTA  \n",
+       "583                             SEM RESPOSTA  \n",
+       "584                             SEM RESPOSTA  \n",
+       "585                             SEM RESPOSTA  \n",
+       "586                             SEM RESPOSTA  \n",
+       "\n",
+       "[587 rows x 9 columns]"
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Em qual UF você reside?</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>SP</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>SP</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>PB</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>PE</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>PR</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>7075</th>\n      <td>SP</td>\n    </tr>\n    <tr>\n      <th>7076</th>\n      <td>MG</td>\n    </tr>\n    <tr>\n      <th>7077</th>\n      <td>PB</td>\n    </tr>\n    <tr>\n      <th>7078</th>\n      <td>DF</td>\n    </tr>\n    <tr>\n      <th>7079</th>\n      <td>SP</td>\n    </tr>\n  </tbody>\n</table>\n<p>7080 rows × 1 columns</p>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Como você se define?</th>\n      <th>Se define - Se outro, qual?</th>\n      <th>Como você se identifica?</th>\n      <th>Se identifica - Se outro, qual?</th>\n      <th>Faz parte da população T (pessoa transgênera, travesti)?</th>\n      <th>Orientação sexual</th>\n      <th>Orientação sexual - Se outro, qual?</th>\n      <th>Pessoa com necessidades específicas?</th>\n      <th>Necessidades específicas - Se sim, qual?</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Uma pessoa branca</td>\n      <td>SEM RESPOSTA</td>\n      <td>Mulher</td>\n      <td>SEM RESPOSTA</td>\n      <td>Não</td>\n      <td>Bisexual</td>\n      <td>SEM RESPOSTA</td>\n      <td>Não</td>\n      <td>SEM RESPOSTA</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Uma pessoa branca</td>\n      <td>SEM RESPOSTA</td>\n      <td>Homem</td>\n      <td>SEM RESPOSTA</td>\n      <td>Não</td>\n      <td>Hétero</td>\n      <td>SEM RESPOSTA</td>\n      <td>Não</td>\n      <td>SEM RESPOSTA</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Uma pessoa branca</td>\n      <td>SEM RESPOSTA</td>\n      <td>Homem</td>\n      <td>SEM RESPOSTA</td>\n      <td>Não</td>\n      <td>Hétero</td>\n      <td>SEM RESPOSTA</td>\n      <td>Não</td>\n      <td>SEM RESPOSTA</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Uma pessoa branca</td>\n      <td>SEM RESPOSTA</td>\n      <td>Homem</td>\n      <td>SEM RESPOSTA</td>\n      <td>Não</td>\n      <td>Hétero</td>\n      <td>SEM RESPOSTA</td>\n      <td>Não</td>\n      <td>SEM RESPOSTA</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Uma pessoa branca</td>\n      <td>SEM RESPOSTA</td>\n      <td>Homem</td>\n      <td>SEM RESPOSTA</td>\n      <td>Não</td>\n      <td>Hétero</td>\n      <td>SEM RESPOSTA</td>\n      <td>Não</td>\n      <td>SEM RESPOSTA</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>582</th>\n      <td>Uma pessoa parda</td>\n      <td>SEM RESPOSTA</td>\n      <td>Homem</td>\n      <td>SEM RESPOSTA</td>\n      <td>Não</td>\n      <td>Hétero</td>\n      <td>SEM RESPOSTA</td>\n      <td>Não</td>\n      <td>SEM RESPOSTA</td>\n    </tr>\n    <tr>\n      <th>583</th>\n      <td>Uma pessoa parda</td>\n      <td>SEM RESPOSTA</td>\n      <td>Homem</td>\n      <td>SEM RESPOSTA</td>\n      <td>Não</td>\n      <td>Hétero</td>\n      <td>SEM RESPOSTA</td>\n      <td>Não</td>\n      <td>SEM RESPOSTA</td>\n    </tr>\n    <tr>\n      <th>584</th>\n      <td>Uma pessoa amarela</td>\n      <td>SEM RESPOSTA</td>\n      <td>Mulher</td>\n      <td>SEM RESPOSTA</td>\n      <td>Não</td>\n      <td>Pansexual</td>\n      <td>SEM RESPOSTA</td>\n      <td>Não</td>\n      <td>SEM RESPOSTA</td>\n    </tr>\n    <tr>\n      <th>585</th>\n      <td>Uma pessoa branca</td>\n      <td>SEM RESPOSTA</td>\n      <td>Homem</td>\n      <td>SEM RESPOSTA</td>\n      <td>Não</td>\n      <td>Hétero</td>\n      <td>SEM RESPOSTA</td>\n      <td>Não</td>\n      <td>SEM RESPOSTA</td>\n    </tr>\n    <tr>\n      <th>586</th>\n      <td>Uma pessoa parda</td>\n      <td>SEM RESPOSTA</td>\n      <td>Mulher</td>\n      <td>SEM RESPOSTA</td>\n      <td>Não</td>\n      <td>Hétero</td>\n      <td>SEM RESPOSTA</td>\n      <td>Não</td>\n      <td>SEM RESPOSTA</td>\n    </tr>\n  </tbody>\n</table>\n<p>587 rows × 9 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 17
+     "execution_count": 16
     }
    ],
    "source": [
     "sample_df = get_event_tickets()\n",
-    "sample_df[[\"Em qual UF você reside?\"]]"
+    "sample_df"
    ]
   },
   {
