ajusta nome paises

--- a/dev/dev.ipynb
+++ b/dev/dev.ipynb
@@ -1,34 +1,17 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Notebook para testes"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import base64\n",
     "\n",
@@ -44,15 +27,11 @@
     "from plotly.subplots import make_subplots\n",
     "import plotly.graph_objects as go\n",
     "from datetime import datetime"
-   ],
-   "cell_type": "code",
-   "metadata": {},
-   "execution_count": 38,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,18 +68,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "19223"
       ]
      },
+     "execution_count": 4,
      "metadata": {},
-     "execution_count": 71
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -110,32 +89,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_event_tickets():\n",
+    "    df = get_df_from_csv(\"inscrições-palestras\")\n",
+    "\n",
+    "    rename_columns = {\n",
+    "        \"Orientação sexual:\": \"Orientação sexual\",\n",
+    "        \"Se outro, qual?\": \"Se define - Se outro, qual?\",\n",
+    "        \"Se outro, qual?.1\": \"Se identifica - Se outro, qual?\",\n",
+    "        \"Se outro, qual?.2\": \"Orientação sexual - Se outro, qual?\",\n",
+    "        \"Se sim, qual?\": \"Necessidades específicas - Se sim, qual?\",\n",
+    "        \"Se sim, qual?.1\": \"comunidade local - Se sim, qual?\",\n",
+    "    }\n",
+    "\n",
+    "    return (\n",
+    "        df[\n",
+    "            [\n",
+    "                \"Como você se define\",\n",
+    "                \"Se outro, qual?\",\n",
+    "                \"Como você se identifica?\",\n",
+    "                \"Se outro, qual?.1\",\n",
+    "                \"Faz parte da população T (pessoa transgênera, travesti)?\",\n",
+    "                \"Orientação sexual:\",\n",
+    "                \"Se outro, qual?.2\",\n",
+    "                \"Pessoa com necessidades específicas?\",\n",
+    "                \"Se sim, qual?\",\n",
+    "                \"Em qual UF você reside?\",\n",
+    "                \"Em qual país você reside?\",\n",
+    "                \"De quais edições da Python Brasil você já participou?\",\n",
+    "                \"Você já participou de algum outro evento Python?\",\n",
+    "                \"Você participou de outros eventos online durante a pandemia de covid-19?\",\n",
+    "                \"Há quanto tempo você programa em Python?\",\n",
+    "                \"Como você classificaria seu nível de conhecimento em Python?\",\n",
+    "                \"Você é estudante?\",\n",
+    "                \"Você trabalha com Python?\",\n",
+    "                \"Você pretende submeter alguma atividades (palestra, tutorial) para a Python Brasil?\",\n",
+    "                \"Você faz parte de alguma comunidade local? (grupy, PUG, PyLadies, AfroPython)\",\n",
+    "                \"Se sim, qual?.1\",\n",
+    "            ]\n",
+    "        ]\n",
+    "        .rename(columns=rename_columns)\n",
+    "        .fillna(\"N/A\")\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = get_event_tickets()\n",
+    "col = \"Em qual país você reside?\"\n",
+    "df[col] = df[col].str.strip()\n",
+    "df.loc[df[col] == 'Por favor, que formulário mais sem sentido. Querem também saber que orientação sexual vou querer ter na próxima encarnação? Isso não tem sentido.',col] = 'N/A'\n",
+    "df.loc[df[col] == ',',col] = 'N/A'\n",
+    "df.loc[df[col] == 'PNR',col] = 'N/A'\n",
+    "df.loc[df[col] == 'Prefiro não responder.',col] = 'N/A'\n",
+    "df.loc[df[col] == 'Alemanha, Berlin',col] = 'Alemanha'\n",
+    "df.loc[df[col] == 'Canada',col] = 'Canadá'\n",
+    "df.loc[df[col] == 'Dublin, Irlanda',col] = 'Irlanda'\n",
+    "df.loc[df[col] == 'Ireland',col] = 'Irlanda'\n",
+    "df.loc[df[col] == 'irlanda',col] = 'Irlanda'\n",
+    "df.loc[df[col] == 'Italy',col] = 'Itália'\n",
+    "df.loc[df[col] == 'Mocambique',col] = 'Moçambique'\n",
+    "df.loc[df[col] == 'Países Baixo',col] = 'Países Baixos'\n",
+    "df.loc[df[col] == 'Perú',col] = 'Peru'\n",
+    "df.loc[df[col] == 'US',col] = 'EUA'\n",
+    "df.loc[df[col] == 'USA',col] = 'EUA'\n",
+    "df.loc[df[col] == 'Usa',col] = 'EUA'\n",
+    "df.loc[df[col] == 'Estados Unidos',col] = 'EUA'\n",
+    "df.loc[df[col] == 'United States',col] = 'EUA'\n",
+    "df.loc[df[col] == 'CZ',col] = 'República Tcheca'\n",
+    "df.loc[df[col] == 'United Kingdom',col] = 'Reino Unido'\n",
+    "df.loc[df[col] == 'colombia',col] = 'Colombia'\n",
+    "df.loc[df[col] == 'portugal',col] = 'Portugal'\n",
+    "df.loc[df[col] == 'PT',col] = 'Portugal'\n",
+    "df.loc[df[col] == 'thailand',col] = 'Tailandia'\n",
+    "df.loc[df[col] == 'France',col] = 'França'\n",
+    "df.loc[df[col] == 'Japao',col] = 'Japão'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "  interval_start_timestamp  speaking_minutes\n",
-       "0               2020-10-31               506\n",
-       "1               2020-11-01              2996\n",
-       "2               2020-11-02              1674\n",
-       "3               2020-11-03              1336\n",
-       "4               2020-11-04              2152\n",
-       "5               2020-11-05              4919\n",
-       "6               2020-11-06              8204\n",
-       "7               2020-11-07              4964"
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>interval_start_timestamp</th>\n      <th>speaking_minutes</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2020-10-31</td>\n      <td>506</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2020-11-01</td>\n      <td>2996</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2020-11-02</td>\n      <td>1674</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2020-11-03</td>\n      <td>1336</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2020-11-04</td>\n      <td>2152</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>2020-11-05</td>\n      <td>4919</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>2020-11-06</td>\n      <td>8204</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>2020-11-07</td>\n      <td>4964</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+       "['Alemanha',\n",
+       " 'Argentina',\n",
+       " 'Austria',\n",
+       " 'Bangladesh',\n",
+       " 'Bélgica',\n",
+       " 'Cabo verde',\n",
+       " 'Canadá',\n",
+       " 'Chile',\n",
+       " 'Colombia',\n",
+       " 'EUA',\n",
+       " 'Espanha',\n",
+       " 'França',\n",
+       " 'Holanda',\n",
+       " 'Hungria',\n",
+       " 'India',\n",
+       " 'Irlanda',\n",
+       " 'Itália',\n",
+       " 'Japão',\n",
+       " 'Luxemburgo',\n",
+       " 'Marte',\n",
+       " 'Moçambique',\n",
+       " 'México',\n",
+       " 'N/A',\n",
+       " 'Noruega',\n",
+       " 'Paraguay',\n",
+       " 'Países Baixos',\n",
+       " 'Peru',\n",
+       " 'Portugal',\n",
+       " 'Reino Unido',\n",
+       " 'República Tcheca',\n",
+       " 'Suécia',\n",
+       " 'Tailandia',\n",
+       " 'Uruguay']"
+      ]
      },
+     "execution_count": 91,
      "metadata": {},
-     "execution_count": 65
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "voz_df = get_event_tickets(\"discord-atividade-por-voz\")\n",
-    "voz_df"
+    "x= list(df[col].unique())\n",
+    "x.sort()\n",
+    "x"
    ]
   },
   {
@@ -145,5 +234,26 @@
    "outputs": [],
    "source": []
   }
- ]
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.7"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
