--- a/dev/dev.ipynb
+++ b/dev/dev.ipynb
@@ -229,6 +229,184 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x= pd.read_csv('../files/inscrições-palestras-2021.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rename_columns = {\n",
+    "                \"como_voce_se_define\": \"Como você se define\",\n",
+    "                \"como_voce_se_define_se_outro\": \"Se outro, qual?\",\n",
+    "                \"como_voce_se_indentifica\": \"Como você se identifica?\",\n",
+    "                \"como_voce_se_indentifica_se_outro\": \"Se define - Se outro, qual?\",\n",
+    "                \"faz_parte_da_populacao_t\": \"Faz parte da população T (pessoa transgênera, travesti)?\",\n",
+    "                \"orientaca_sexual\": \"Orientação sexual\",\n",
+    "                \"orientaca_sexual_se_outro\": \"Se identifica - Se outro, qual?\",\n",
+    "                \"pessoa_com_necessidade_especifica\":\"Pessoa com necessidades específicas?\",\n",
+    "                \"pessoa_com_necessidade_especifica_se_sim_qual\":\"Necessidades específicas - Se sim, qual?\",\n",
+    "                \"uf\": \"Necessidades específicas - Se sim, qual?\",\n",
+    "                \"pais\": \"Em qual país você reside?\",\n",
+    "                \"edicoes_anteriores_pybr\": \"De quais edições da Python Brasil você já participou?\",\n",
+    "                \"eventos_pybr\": \"Você já participou de algum outro evento Python?\",\n",
+    "                \"eventos_online\": \"Você participou de outros eventos online durante a pandemia de covid-19?\",\n",
+    "                \"programa_em_python\": \"Há quanto tempo você programa em Python?\",\n",
+    "                \"nivel_python\": \"Como você classificaria seu nível de conhecimento em Python?\",\n",
+    "                \"estudante\": \"Você é estudante?\",\n",
+    "                \"trabalha_com_python\": \"Você trabalha com Python?\",\n",
+    "                \"parte_de_alguma_comunidade\": \"Você faz parte de alguma comunidade local? (grupy, PUG, PyLadies, AfroPython)\",\n",
+    "                \"comunidade_qual\":\"Comunidade local - Se sim, qual?\"\n",
+    "            }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x= x.rename(columns=rename_columns).fillna(\"N/A\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Necessidades específicas - Se sim, qual?</th>\n",
+       "      <th>Necessidades específicas - Se sim, qual?</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>N/A</td>\n",
+       "      <td>RN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>N/A</td>\n",
+       "      <td>SP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>N/A</td>\n",
+       "      <td>RJ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>N/A</td>\n",
+       "      <td>SP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>N/A</td>\n",
+       "      <td>AL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6505</th>\n",
+       "      <td>N/A</td>\n",
+       "      <td>N/A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6506</th>\n",
+       "      <td>N/A</td>\n",
+       "      <td>N/A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6507</th>\n",
+       "      <td>N/A</td>\n",
+       "      <td>N/A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6508</th>\n",
+       "      <td>N/A</td>\n",
+       "      <td>N/A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6509</th>\n",
+       "      <td>N/A</td>\n",
+       "      <td>Fora da America Latina / Fuera de América Latina</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>6510 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Necessidades específicas - Se sim, qual?  \\\n",
+       "0                                         N/A   \n",
+       "1                                         N/A   \n",
+       "2                                         N/A   \n",
+       "3                                         N/A   \n",
+       "4                                         N/A   \n",
+       "...                                       ...   \n",
+       "6505                                      N/A   \n",
+       "6506                                      N/A   \n",
+       "6507                                      N/A   \n",
+       "6508                                      N/A   \n",
+       "6509                                      N/A   \n",
+       "\n",
+       "              Necessidades específicas - Se sim, qual?  \n",
+       "0                                                   RN  \n",
+       "1                                                   SP  \n",
+       "2                                                   RJ  \n",
+       "3                                                   SP  \n",
+       "4                                                   AL  \n",
+       "...                                                ...  \n",
+       "6505                                               N/A  \n",
+       "6506                                               N/A  \n",
+       "6507                                               N/A  \n",
+       "6508                                               N/A  \n",
+       "6509  Fora da America Latina / Fuera de América Latina  \n",
+       "\n",
+       "[6510 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x[[\"Necessidades específicas - Se sim, qual?\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -237,7 +415,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -251,7 +429,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.7"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
